--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,7 @@
 
 body{
     color: rgb(255, 255, 255);
-    background: linear-gradient(329.54deg, hsl(0deg 67% 35%) 0%, #961e1e 100%);
+    background: linear-gradient(329.54deg, hsl(0deg 4% 5%) 0%, #0d0c0c 100%);
 }
 
 body, input, button, textarea{
