--- a/src/components/Banner/styles.css
+++ b/src/components/Banner/styles.css
@@ -5,28 +5,31 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: wheat;
+    background-color: rgb(255, 255, 255);
+	font-family: 'Open Sans', sans-serif;
 }
 
 .main h1 {
     font-size: 45px;
     font-weight: 900;
     line-height: 50px;
-    color: #961e1e;
+    color: #000;
 }
 
 .main img {
-    width: 30%;
+    width: 70%;
 	max-width: 1100px;
 	height: 100%;
 	max-height: 680px;
+	border-radius: 2rem;
+	margin-left: 8rem;
 }
 
 .main p {
     margin-top: 20px;
     font-size: 20px;
     line-height: 34px;
-    color: #961e1e;;
+    color: #000;;
     width: 600px;
 
 }
@@ -40,31 +43,31 @@
 		align-items: center;
 		width: 100%;
 		height: 100%;
-		background-color: wheat;
+		background-color: rgb(255, 255, 255);
 	}
 
 	.main h1 {
-    font-size: 45px;
+    font-size: 35px;
 	font-weight: 900;
 	line-height: 78px;
-    color: #961e1e;
+    color: #000;
 	}
 
 	.main p {
-		margin-top: 20px;
-		font-size: 20px;
+		margin-top: 15px;
+		font-size: 16px;
 		line-height: 34px;
-		color: #961e1e;
+		color: #000;
 	
 	}
 
 	.main img {
-		margin-top: 4rem;
-		width: 100%;
+		margin-top: 2rem;
+		width: 50%;
 		max-width: 400px;
 		height: 100%;
 		max-height: 400px;
-		align-items: center;
+		margin-left: 5rem;
 	}
 }
 
@@ -74,32 +77,31 @@
 		display: flex;
 		flex-direction:column;
 		align-items: flex-start;
-		background-color: wheat;
+		background-color: rgb(255, 255, 255);
 	}
 
 	.main h1 {
 		font-size: 25px;
 		font-weight: 800;
 		line-height: 60px;
-		color: #961e1e;
+		color: #000;
 	}
 
 	.main p {
 		margin-top: 20px;
 		font-size: 14px;
 		line-height: 34px;
-		color: #961e1e;
+		color: #000;
 		width: 100%;
 	
 	}
 
 	.main img {
-		margin-top: 4rem;
-		width: 100%;
+		margin-top: 2rem;
+		width: 60%;
 		max-width: 400px;
 		height: 100%;
 		max-height: 400px;
-		align-items: center;
 	}
 }
 
