--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,5 +1,5 @@
 .rodape {
-    background-color: #961e1e;
+    background-color: #0d0c0c;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -20,18 +20,17 @@
 }
 
 .link {
-    color: wheat;
-    text-decoration: none;
+   text-decoration: none;
 }
 
 .logo {
     display: flex;
-    width: 12rem;
-    height: 12rem;
+    width: 15rem;
+    height: 6rem;
 }
 
 .titulo--redes {
-    color: wheat;
+    color: rgb(255, 255, 255);
     margin-bottom: 1rem;
     text-align: center;
 }
@@ -48,6 +47,10 @@
     opacity: 0.5;
     text-align: center;
     padding: 10px;
+}
+
+.autora {
+    color: white;
 }
 
 @media (max-width:768px){
@@ -86,16 +89,19 @@
         text-align: center;
         padding: 10px;
     }
+    .autora {
+        color: white;
+    }
 }
 
 @media (max-width: 425px) {
     .rodape {
-        background-color: #961e1e;
+        background-color: #0d0c0c;
         display: block;
     }
 
     .menuFooter {
-        width: 90%;
+        width: 87%;
         font-size: 15px;
         margin: 1rem;
         display: flex;
@@ -110,14 +116,15 @@
 
     .logo {
         display: flex;
-        width: 12rem;
-        height: 12rem;
+        width: 10rem;
+        height: 7rem;
         margin: 0 auto
     }
    
     .titulo--redes {
-        color: wheat;
+        color: rgb(255, 255, 255);
         margin-bottom: 0.5rem;
+        font-size: 1rem;
     }
 
     .imgFooter {
@@ -125,6 +132,10 @@
         margin-right: 1rem;
         display: flex;
         flex-direction: column;
+    }
+
+    .autora {
+        color: white;
     }
 
 }
