--- a/src/pages/Contribua/styles.css
+++ b/src/pages/Contribua/styles.css
@@ -1,65 +1,78 @@
-input {
-    width: 80%;
-    margin: 1rem;
-    padding: 1rem;
-    border-radius: 0.5em;
-    margin-left: 8rem;
+.main--contribua{
+    background-color: white;
+    height: 40rem;
 }
 
-.repos {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 1.1rem;
-}
-
-.repositorio {
-    width: 250px;
-    background-color: rgb(221, 169, 221);
-    color: #4f2158;
-    margin: 0.4rem;
-    padding: 1.3rem;
-    list-style-type: none;
-    border-radius: 0.6rem;
+.texto--contribua{
+    color: black;
+    padding: 2rem;
     text-align: center;
+    margin-left: 10rem;
+    margin-right: 10rem;
 }
+
+.formasDePagamento{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.imgPagamento {
+    width: 15rem;
+    margin: 1rem;
+    border-radius: 2rem;
+
+}
+
 
 @media (max-width: 768px) {
-    input {
-        width: 250px;
-        margin: 2rem;
-        margin-left: 5.5rem;
-        padding: 1.5rem;
-        border-radius: 0.5rem; 
+    .main--contribua{
+        background-color: white;
+        height: 38rem;
     }
+
+    .texto--contribua{
+        color: black;
+        padding: 2rem;
+        text-align: center;
+        margin-left: 9rem;
+        margin-right: 9rem;
+        font-size: 1rem;    
+    }
+
+    .imgPagamento {
+        width: 12rem;
+        margin: 1rem;
+        border-radius: 2rem;
+    }
+
 }
 
 @media (max-width: 425px) {
-    input {
-        width: 240px;
-        margin: 1rem;
-        margin-left: 6.7rem;
-        padding: 1.3rem;
-        border-radius: 0.5rem; 
+    .main--contribua{
+        background-color: white;
+        height: 65rem;
     }
+
+    .texto--contribua{
+        color: black;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        font-size: 1rem;    
+    }
+
+    .formasDePagamento{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .imgPagamento {
+        width: 8.5rem;
+        margin: 1rem;
+        border-radius: 2rem;
+    }
+
+
 }
 
-.repos {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.repositorio {
-    font-size: 15px;
-    width: 200px;
-    background-color: rgb(221, 169, 221);
-    color: #4f2158;
-    margin-left: 2rem;
-    padding: 1.3rem;
-    list-style-type: none;
-    border-radius: 0.6rem;
-    text-align: center;
-}
