--- a/src/pages/Equipe/styles.css
+++ b/src/pages/Equipe/styles.css
@@ -1,5 +1,5 @@
 .main-equipe {
-    background-color: wheat;
+    background-color: rgb(255, 255, 255);
     width: 100%;
     height: 30rem;
 }
@@ -9,7 +9,7 @@
     text-align: center;
     color: black;
     padding-top: 2rem;
-    color: #961e1e;
+    color: black;
 }
 
 .card--equipe {
@@ -21,8 +21,8 @@
 .img--card {
     width: 10rem;
     border-radius: 10px;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 .titulo--card {
@@ -33,7 +33,7 @@
 
 @media (max-width:768px){
     .main-equipe {
-        background-color: wheat;
+        background-color: rgb(255, 255, 255);
         width: 100%;
         height: 40rem;
     }
@@ -61,7 +61,7 @@
 
 @media (max-width:425px) {
     .main-equipe {
-        background-color: wheat;
+        background-color: rgb(255, 255, 255);
         width: 100%;
         height: 63rem;
     }
@@ -71,7 +71,7 @@
         text-align: center;
         color: black;
         padding-top: 2rem;
-        color: #961e1e;
+        color: black;
     }
 
     .card--equipe {
