--- a/src/pages/Voluntariado/styles.css
+++ b/src/pages/Voluntariado/styles.css
@@ -1,74 +1,81 @@
-.main-simpson {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    background-color: wheat;
-}
-
-.main-simpson .card{
-    background-color: wheat;
-    width: 350px;
+.main--voluntario {
+    background-color: rgb(255, 255, 255);
+    height: 20rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
 }
 
-.main-simpson .card img{
-    width: 50%;
-    height: 80%;
-}
-
-.main-simpson .card h2{
-    color:#4f2158;
-}
-
-
-.main-simpson button {
-    background-color: black;
-    border: none;
-    color: white;
-    padding: 15px 32px;
+.texto--voluntariado {
+    color: black;
+    margin-top: 6rem;
+    margin-left: 18rem;
+    margin-right: 18rem;
+    margin-bottom: 3rem;
     text-align: center;
+}
+
+.button {
+    font-size: 1.2rem;
+    padding: 0.8rem;
+    color: rgb(0, 0, 0);
+    border-radius: 2rem;
+    background-color: #ef3131;
+    width: 18rem;
+    margin-top: 3rem;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
 }
 
 @media (max-width:768px){
-    .main-simpson {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        background-color: wheat;
-        padding: 3rem;
-    }
-    .main-simpson .card{
-        margin: 2rem;
-        background-color: wheat;
-        width: 350px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    
+    .main--voluntario {
+        background-color: rgb(255, 255, 255);
+        height: 18rem;
     }
 
-    .main-simpson button {
-    background-color: black;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+    .texto--voluntariado {
+        color: black;
+        margin-top: 4rem;
+        margin-left: 12rem;
+        margin-right: 7rem;
+        text-align: center;
+        text-decoration: none;
+    }
+
+    .button {
+        font-size: 0.9rem;
+        padding: 0.8rem;
+        color: rgb(0, 0, 0);
+        margin-left: 5rem;
+        border-radius: 2rem;
+        background-color: #ef3131;
+        text-decoration: none;
+    }
 }
+
+@media (max-width:425px){
+    .main--voluntario {
+        background-color: rgb(255, 255, 255);
+        height: 14rem;
+    }
+
+    .texto--voluntariado {
+        color: black;
+        margin-top: 2rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        text-align: center;
+        text-decoration: none;
+        font-size: 1rem;
+    }
+
+    .button {
+        font-size: 0.9rem;
+        padding: 0.8rem;
+        color: rgb(0, 0, 0);
+        margin-left: 1rem;
+        border-radius: 2rem;
+        background-color: #ef3131;
+        text-decoration: none;
+    }
+
 }
