--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,9 +1,10 @@
 .rodape {
-    background-color: #0d0c0c;
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    align-items: center
+    align-items: center;
+    border-top: rgb(245, 211, 211) 1px solid;
 }
 
 .menuFooter {
@@ -19,9 +20,6 @@
     list-style: none;
 }
 
-.link {
-   text-decoration: none;
-}
 
 .logo {
     display: flex;
@@ -30,9 +28,10 @@
 }
 
 .titulo--redes {
-    color: rgb(255, 255, 255);
+    color: rgb(250, 49, 74);
     margin-bottom: 1rem;
     text-align: center;
+    font-weight: bold;
 }
 
 .imgFooter {
@@ -42,9 +41,8 @@
 
 .rodape__cc {
     width: 100%;
-    background-color: #292A2A;
+    background-color: #F08892;
     font-size: 14px;
-    opacity: 0.5;
     text-align: center;
     padding: 10px;
 }
@@ -54,27 +52,36 @@
 }
 
 @media (max-width:768px){
+    .rodape {
+        background-color: #ffffff;
+    }
+
     .menuFooter {
-        margin: 2rem;
+        margin: 1rem;
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
     }
  
     .menuFooter li {
-        margin-left: 4rem;
+        margin-left: 2rem;
         list-style: none;
     }
 
     .logo {
         display: flex;
-        width: 12rem;
-        height: 12rem;
+        width: 10rem;
+        height: 10rem;
     }
-    
+
+    .titulo--redes {
+        color: rgb(250, 49, 74);
+        font-weight: bold;
+    }    
 
     .imgFooter {
-        margin: 2rem;
+        margin: 1rem;
+        margin-right: 2.4rem;
         display: flex;
         align-items: center;
         justify-content: center;    
@@ -83,9 +90,8 @@
 
     .rodape__cc {
         width: 100%;
-        background-color: #292A2A;
-        font-size: 14px;
-        opacity: 0.5;
+        background-color: #F08892;
+        font-size: 13px;
         text-align: center;
         padding: 10px;
     }
@@ -96,16 +102,18 @@
 
 @media (max-width: 425px) {
     .rodape {
-        background-color: #0d0c0c;
+        background-color: #ffffff;
         display: block;
     }
 
     .menuFooter {
         width: 87%;
-        font-size: 15px;
+        font-size: 13px;
         margin: 1rem;
         display: flex;
         align-items: center;
+        margin-top: 0.1rem;
+        padding-top: 1rem;
       }
  
 
@@ -116,15 +124,16 @@
 
     .logo {
         display: flex;
-        width: 10rem;
-        height: 7rem;
+        width: 9rem;
+        height: 5rem;
         margin: 0 auto
     }
    
     .titulo--redes {
-        color: rgb(255, 255, 255);
+        color: rgb(250, 49, 74);
         margin-bottom: 0.5rem;
         font-size: 1rem;
+        font-weight: bold;
     }
 
     .imgFooter {
@@ -137,5 +146,11 @@
     .autora {
         color: white;
     }
+
+    .rodape__cc {
+        font-size: 12px;
+        background-color: #F08892;
+    }
+
 
 }
