--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -1,7 +1,12 @@
 .header {
   display: flex;
   align-items: center;
-  margin-left: 5rem
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  top: 0;
+  padding: 2rem;
+  border-bottom: rgb(245, 211, 211) 1px solid;
 }
 
 .menu--principal {
@@ -23,21 +28,20 @@
 }
 
 .link {
-  color: #ffffff;
+  color: #4D203E;;
   text-decoration: none;
 }
 
 .imgLogo {
   display: flex;
   width: 12rem;
-  height: 6rem;
+
 }
 
 @media (max-width: 768px) {
   .header {
     display: flex;
     align-items: center;
-    margin-left: 2rem
   }
 
   .menu--principal {
@@ -54,34 +58,44 @@
 
   .imgLogo {
     display: flex;
-    width: 9rem;
-    height: 9rem;
+    width: 8rem;
+    height: 4rem;
   }
 }
 
 @media (max-width: 425px) {
+  .header {
+    display: flex;
+    flex-direction: column;    
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+  }
+
   .menu--principal {
     width: 100%;
-    margin-right: 2rem;
+    margin: 0;
+    margin-right: 1.5rem;
   }
 
   .menu {
-    font-size: 10px;
+    font-size: 12px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin: 0;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: auto 0;
+    padding-top: 1rem;
   }
 
   .menu li {
     list-style: none;
-    margin-left: 2rem;
+    margin-left: 1.5rem;
   }
   
   .imgLogo {
     display: flex;
     width: 7rem;
-    height: 7rem;
+    height: 3rem;
   }
 }
 
