--- a/src/pages/Voluntariado/styles.css
+++ b/src/pages/Voluntariado/styles.css
@@ -1,26 +1,37 @@
 .main--voluntario {
-    background-color: rgb(255, 255, 255);
-    height: 20rem;
+    background-color: #4D203F;
+    height: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.texto--voluntariado {
-    color: black;
-    margin-top: 6rem;
+.texto--voluntariado h1{
+    color: #E72360;
+    font-size: 2rem;
+    margin-top: 7rem;
     margin-left: 18rem;
     margin-right: 18rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.texto--voluntariado p {
+    margin-top: 2rem;
+    margin-left: 16rem;
+    margin-right: 16rem;
+    margin-bottom: 4rem;
     text-align: center;
 }
 
 .button {
-    font-size: 1.2rem;
-    padding: 0.8rem;
-    color: rgb(0, 0, 0);
+    font-size: 1rem;
+    padding: 1.3rem;
+    padding-left: 2.3rem;
+    padding-right: 2.3rem;
+    color: rgb(255, 255, 255);
     border-radius: 2rem;
-    background-color: #ef3131;
+    background-color: #E72360;
     width: 18rem;
     margin-top: 3rem;
     text-decoration: none;
@@ -28,53 +39,78 @@
 
 @media (max-width:768px){
     .main--voluntario {
-        background-color: rgb(255, 255, 255);
-        height: 18rem;
+        background-color: #4D203F;
+        height: 23rem;
     }
 
-    .texto--voluntariado {
-        color: black;
-        margin-top: 4rem;
-        margin-left: 12rem;
-        margin-right: 7rem;
+    .texto--voluntariado h1{
+        color: #E72360;
+        font-size: 1.5rem;
+        margin-top: 5rem;
+        margin-left: 13rem;
+        margin-right: 13rem;
+        margin-bottom: 2rem;
         text-align: center;
-        text-decoration: none;
+    }
+    
+    .texto--voluntariado p {
+        margin-top: 2rem;
+        margin-left: 8rem;
+        margin-right: 8rem;
+        margin-bottom: 4rem;
+        text-align: center;
+        color:white;
     }
 
     .button {
         font-size: 0.9rem;
-        padding: 0.8rem;
-        color: rgb(0, 0, 0);
-        margin-left: 5rem;
+        padding: 1rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        color: rgb(255, 255, 255);
+        margin-left: 1rem;
+        margin-right: 2rem;
         border-radius: 2rem;
-        background-color: #ef3131;
+        background-color: #E72360;
         text-decoration: none;
     }
 }
 
 @media (max-width:425px){
     .main--voluntario {
-        background-color: rgb(255, 255, 255);
-        height: 14rem;
+        background-color: #4D203F;
+        height: 22rem;
     }
 
-    .texto--voluntariado {
-        color: black;
-        margin-top: 2rem;
-        margin-left: 3rem;
-        margin-right: 3rem;
+    .texto--voluntariado h1{
+        color: #E72360;
+        font-size: 1.1rem;
+        margin-top: 2.5rem;
+        margin-left: 7rem;
+        margin-right: 7rem;
+        margin-bottom: 2rem;
         text-align: center;
-        text-decoration: none;
-        font-size: 1rem;
+    }
+
+    .texto--voluntariado p {
+        font-size: 0.8rem;
+        margin-top: 2rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        margin-bottom: 3rem;
+        text-align: center;
     }
 
     .button {
-        font-size: 0.9rem;
-        padding: 0.8rem;
-        color: rgb(0, 0, 0);
-        margin-left: 1rem;
+        font-size: 0.7rem;
+        padding: 1rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        color: rgb(255, 255, 255);
+        margin-left: 2rem;
+        margin-right: 1.5rem;
         border-radius: 2rem;
-        background-color: #ef3131;
+        background-color: #E72360;
         text-decoration: none;
     }
 
