--- a/src/components/Banner/styles.css
+++ b/src/components/Banner/styles.css
@@ -1,4 +1,5 @@
 .main {
+	font-family: 'Open Sans';
     padding: 4rem;
     display: flex;
     justify-content: space-around;
@@ -16,12 +17,12 @@
 }
 
 .main img {
-    width: 40%;
+    width: 60%;
 	max-width: 1100px;
 	height: 100%;
 	max-height: 680px;
-	border-radius: 2rem;
-	margin-left: 10rem;
+	border-radius: 0.8rem;
+	margin-left: 12rem;
 }
 
 .main h2 {
@@ -62,7 +63,7 @@
 
 .sectionThree {
 	background-color: #702B4C;
-	height: 21.8rem;
+	height: 17rem;
 	padding: 2rem;
 }
 
@@ -91,22 +92,22 @@ hr{
 	background-color: #A33C5F;
 	display: flex;
 	align-items: center;
-	padding-left: 3rem;
-	height: 20rem;
+	padding-left: 18rem;
+	height: 25rem;
 }
 
 .sectionFour img {
-	width: 70%;
-	max-width: 1100px;
+	width: 55%;
+	max-width: 800px;
 	height: 100%;
 	max-height: 680px;
 	border-radius: 0.2rem;
 	margin-left: 5rem;
-	margin-right: 8rem;
+	margin-right: 2rem;
 }
 
 .sectionFour h2 {
-	font-size: 0.6rem;
+	font-size: 0.8rem;
 	color: white;
 	margin-left: 5rem;
 }
@@ -125,8 +126,8 @@ hr{
 .sectionFive p {
 	text-align: center;
 	font-size: 20px;
-	margin-left: 24rem;
-	margin-right: 26rem;
+	margin-left: 22rem;
+	margin-right: 24rem;
 	padding: 2rem;
 	color: black;
 	font-weight: bold;
@@ -162,10 +163,12 @@ hr{
 
 	.main img {
 		margin-top: 2rem;
-		width: 45%;
+		width: 90%;
 		max-width: 400px;
-		height: 90%;
-		max-height: 300px;
+		height: 100%;
+		max-height: 400px;
+		margin-left: 2rem;
+		border-radius: 0.5rem;
 	}
 
 	.main h2 {
@@ -212,11 +215,11 @@ hr{
 		flex-direction: column;
 		align-items: center;
 		padding-left: 3rem;
-		height: 27rem;
+		height: 29rem;
 	}
 	
 	.sectionFour img {
-		width: 50%;
+		width: 45%;
 		border-radius: 0.2rem;
 		margin-left: 10rem;
 		margin-right: 8rem;
