--- a/src/pages/Contribua/styles.css
+++ b/src/pages/Contribua/styles.css
@@ -3,13 +3,23 @@
     height: 42rem;
 }
 
-.texto--contribua{
+.apoie {
     color: #4D203E;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
     margin-left: 12rem;
     margin-right: 12rem;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
+    font-size: 1.5rem;
+}
+
+.texto--contribua{
+    color: #4D203E;
+    padding: 1rem;
+    text-align: center;
+    margin-left: 12rem;
+    margin-right: 12rem;
+    margin-bottom: 2rem;
     font-size: 1.2rem;
 }
 
@@ -29,8 +39,19 @@
 @media (max-width: 800px) {
     .main--contribua{
         background-color: white;
-        height: 35rem;
+        height: 42rem;
         margin-top: 2rem;
+    }
+
+    .apoie {
+        color: #4D203E;
+        padding: 1rem;
+        padding-top: 4rem;
+        text-align: center;
+        margin-left: 12rem;
+        margin-right: 12rem;
+        margin-top: 2rem;
+        font-size: 1.5rem;
     }
 
     .texto--contribua{
@@ -52,15 +73,23 @@
 @media (max-width: 425px) {
     .main--contribua{
         background-color: white;
-        height: 62rem;
+        height: 63rem;
         margin-top: 0;
+    }
+
+    .apoie {
+        color: #4D203E;
+        padding: 0.8rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-top: 1rem;
+        font-size: 0.7rem;
     }
 
     .texto--contribua{
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         font-size: 0.8rem;    
-        margin-top: 0;
     }
 
     .formasDePagamento{
